# sales_digital_twin

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  技术方案.md  设计思路.md  需求文档.md
examples/: sample1_sales.txt  sample2_negotiation.txt  sample3_chitchat.txt
src/sales_digital_twin/: __init__.py  __main__.py
src/sales_digital_twin/agents/: __init__.py  base.py  classifier.py  contract_advisor.py  crm_advisor.py  extractor.py
src/sales_digital_twin/cli/: __init__.py  app.py
src/sales_digital_twin/core/: __init__.py  constants.py  exceptions.py  factory.py  paths.py  pipeline.py
src/sales_digital_twin/infrastructure/: config.py  logging.py  tracing.py
src/sales_digital_twin/infrastructure/llm/: __init__.py  client.py  json_parser.py  retry.py
src/sales_digital_twin/infrastructure/prompts/: __init__.py  classifier.txt  contract_advisor.txt  crm_advisor.txt  extractor.txt  loader.py
src/sales_digital_twin/models/: enums.py  extraction.py  input.py  output.py  suggestions.py
src/sales_digital_twin/services/: __init__.py  formatter.py  rule_engine.py
tests/: conftest.py  data.py
tests/integration/: test_demo.py
tests/unit/: test_cli_parser.py  test_formatter.py  test_json_parser.py  test_llm_retry.py  test_pipeline_fallback.py  test_pipeline_success.py  test_rule_engine.py
